--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
   push:
     # Sequence of patterns matched against refs/heads
     branches:
-      - master
+      - main
     paths:
       - "source/*/*.js"
 
