--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,15 +8,13 @@ env:
   IMAGE: sample
 
 on:
+  workflow_dispatch:
+
   push:
-    # Sequence of patterns matched against refs/heads
     branches:
       - main
     paths:
-      - "source/*/*"
-
-  # triggered directly from github
-  # workflow_dispatch:
+      - "source/*.js"
 
 jobs:
   build:
